# baburkin_7_diploma

./: .env-example  .gitignore  README.md  config.py  pyproject.toml  readme.md  readmi  readmi.txt  requirements.txt  ui_tests.md
notificatios/: telegram.json
tests/: conftest.py
tests/api tests/: test_create_card.py
tests/api_tests/: README.md  test_check_users_info.py  test_create_card.py  test_exchange_money.py  test_withdraw_amount.py
tests/api_tests/schemas/: manage_user.json  user.json
tests/api_tests/utils/: links.py  routes.py  validations.py
tests/pages/: card_builder.py  dashboard.py  loginpage.py  settings.py  virtual_cards.py  wallet.py
tests/ui tests/: README.md  test_add_wallet.py  test_change_language.py  test_domomode.py
